--- a/clrent/package.json
+++ b/clrent/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
     "chart.js": "^4.4.7",
+    "express-session": "^1.18.1",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "simplebar-vue": "^2.4.0",
