--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,14 @@
     "bootstrap-icons": "^1.12.1",
     "chart.js": "^4.4.7",
     "express-session": "^1.18.1",
+    "chart.js": "^4.4.7",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "simplebar-vue": "^2.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuedraggable": "^4.1.0"
+ 
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
