--- a/client/package.json
+++ b/client/package.json
@@ -33,10 +33,9 @@
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "simplebar-vue": "^2.4.0",
+    "sweetalert2": "^11.21.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "bootstrap": "^5.3.0",
-    "bootstrap-icons": "^1.11.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
