--- a/server/database/configs/dbConfig.env
+++ b/server/database/configs/dbConfig.env
@@ -4,3 +4,7 @@ DB_USER=dev01
 DB_PWD=1234
 DB_DB=dev
 DB_LIMIT=10
+
+# Gmail 설정
+EMAIL_USER=ricefirstcode@gmail.com
+EMAIL_PASSWORD=veyu phki qtyi kgyu
