--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mariadb": "^3.4.1"
+    "mariadb": "^3.4.1",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
