--- a/server/database/configs/dbConfig.env
+++ b/server/database/configs/dbConfig.env
@@ -7,4 +7,4 @@ DB_LIMIT=10
 
 # Gmail 설정
 EMAIL_USER=ricefirstcode@gmail.com
-EMAIL_PASSWORD=veyu phki qtyi kgyu
+EMAIL_PASSWORD=slwp lzkn lwgf ctta
